[gd_scene load_steps=5 format=3 uid="uid://gv62m5k0evcu"]

[ext_resource type="Script" path="res://scripts/pause_menu_tutorial.gd" id="1_pbq4q"]
[ext_resource type="Texture2D" uid="uid://cj2rakmrivimv" path="res://assets/sprites/sprite_sheets/UI ICONS_WHITE_pixel art_Sprite Sheet.png" id="2_hr13u"]
[ext_resource type="FontFile" uid="uid://basjvt4sps6yj" path="res://assets/fonts/KeaniaOne-Regular.ttf" id="2_qd286"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8m6iv"]
atlas = ExtResource("2_hr13u")
region = Rect2(136, 8, 112, 112)

[node name="Tutorial Pause Menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_pbq4q")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.756863)
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.317
anchor_top = 0.5
anchor_right = 0.683
anchor_bottom = 0.786
offset_left = -0.100006
offset_top = -200.0
offset_right = 0.0999756
offset_bottom = -0.200012
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="RestartContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="RestartButton" type="Button" parent="VBoxContainer/RestartContainer"]
process_mode = 3
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.697578, 0.697577, 0.697578, 1)
theme_override_fonts/font = ExtResource("2_qd286")
theme_override_font_sizes/font_size = 40
text = "Restart"
flat = true

[node name="QuitContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="QuitButton" type="Button" parent="VBoxContainer/QuitContainer"]
process_mode = 3
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.698039, 0.698039, 0.698039, 1)
theme_override_fonts/font = ExtResource("2_qd286")
theme_override_font_sizes/font_size = 40
text = "Quit"
flat = true

[node name="Pause" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -76.0
offset_top = 9.0
offset_right = 44.0
offset_bottom = 145.0
grow_horizontal = 0
scale = Vector2(0.5, 0.5)
mouse_filter = 1
icon = SubResource("AtlasTexture_8m6iv")
flat = true

[connection signal="pressed" from="VBoxContainer/RestartContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="focus_entered" from="Pause" to="." method="_on_pause_focus_entered"]
[connection signal="pressed" from="Pause" to="." method="_on_pause_pressed"]
